Colour and readability fixes for posts

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -555,6 +555,10 @@ title, head {
  	font-family: "Lato", sans-serif;
  	display: block;
  }
+ .post {
+ 	background-color: #f2f2f2;
+	color: #111111;
+ }
 
 .icon {
   font-size: 25pt;
